[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/monkey-final.png" type="Texture" id=1]
[ext_resource path="res://scripts/monkey.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 212.0

[node name="monkey" type="Sprite"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="monkey_hitbox" type="Area2D" parent="."]

[node name="collider" type="CollisionShape2D" parent="monkey_hitbox"]
shape = SubResource( 1 )
disabled = true

[node name="monkey_tween" type="Tween" parent="."]
[connection signal="tween_completed" from="monkey_tween" to="." method="_on_monkey_tween_completed"]
